# culgt

./: .cproject  .gitignore  .project  LICENSE  README  README.md
include/: CMakeLists.txt  culgt.doxyfile
include/application/: CMakeLists.txt  FileIterator.h  GaugeConfigurationIteratingApplication.h  ProgramOptions.h  test_FileIterator.cc
include/common/: .gitignore  compiler.h  cuda_functions.h  culgt_compat.h  culgt_typedefs.h  mathfunction_overload.h  nvcc_version.h.in
include/cuLGT1legacy/: Complex.hxx  ParityType.h  SiteNeighbourTableManager.h  ZylinderMomenta.hxx  test_SiteIndexSiteCoordCompatibility.cc
include/cudacommon/: CudaForAllLinks.h  DeviceConverter.h  DeviceHelper.h  DeviceMemoryManager.cu  DeviceMemoryManager.h  DeviceProperties.cu  DeviceProperties.h  LaunchBounds.h  cuda_error.h  cuda_host_device.h
include/cudatest/: CMakeLists.txt  cuda_test_compare.h  cuda_test_outputtypes.h  test_example_gtest_plugin_host.cc
include/eigensolver/: Cardano3x3.h  Matrix.h  PowerIterator.h  Vector.h  diagonalize.txt  matrix_vector.h
include/gaugefixing/: CMakeLists.txt  CoulombGaugeFixing.h  CoulombGaugeTunableObject.h  FullGaugeFixingOverrelaxation.h  FullGaugeFixingOverrelaxationKernel.h  FullGaugeFixingSimulatedAnnealing.h  FullGaugeFixingSimulatedAnnealingKernel.h  FullGaugeTunableObject.h  GaugeFixing4Threads.h  GaugeFixing8Threads.h  GaugeFixingSaOr.h  GaugeSettings.h  GaugefixingLaunchBounds.h  LandauGaugeFixing.h  LandauGaugeTunableObject.h  RandomGaugeTrafo.h  RunInfo.h  TimesliceGaugeFixingOverrelaxation.h  TimesliceGaugeFixingOverrelaxationKernel.h  TimesliceGaugeFixingSimulatedAnnealing.h  TimesliceGaugeFixingSimulatedAnnealingKernel.h  TimesliceGaugeTunableObject.h  TimesliceGaugefixingOverrelaxation.h  TimesliceGaugefixingSimulatedAnnealing.h
include/gaugefixing/algorithms/: OrUpdate.h  SaUpdate.h
include/gaugefixing/gaugetypes/: LandauCoulombGaugeType.h  LandauCoulombLogarithmicGaugeType.h  RandomTrafoType.h
include/interfaces/milc/: MILCConverter.h
include/lattice/: CMakeLists.txt  GaugeConfiguration.h  GaugeConfigurationCudaHelper.h  GaugeConfigurationHelper.h  GlobalLink.h  KernelSetup.h  LatticeDimension.h  Link.h  LinkFile.h  LinkFileHeaderOnly.h  LinkFileHirep.h  LinkFileVogt.h  LinkToGaugefieldConverter.h  LocalLink.h  SubgroupIterator.h  TextureManager.h  ZylinderMomenta.h  gaugefieldtypes.h  test_GaugeConfigurationWithPattern.cu  test_LinkFileVogt.cc  test_LinkFileVogtWithPattern.cc  test_LinkToGaugefieldConverter.cc  test_LocalGlobalLinkCompatibility.cc
include/lattice/configuration_patterns/: GPUPattern.h  GPUPatternParityPriority.h  GPUPatternTimeslice.h  GPUPatternTimesliceParityPriority.h  StandardPattern.h  testhelper_PatternMocks.h
include/lattice/field_structures/: DiracAdjointColorFieldStructure.h  FieldStructure.h  test_DiracColorFieldStructure.cc
include/lattice/filetypes/: .gitignore  LinkFile.h  LinkFileHeaderOnly.h  LinkFileHirep.h  LinkFileILDG.h  LinkFileMDP.h  LinkFileManager.h  LinkFileNERSC.h  LinkFileVogt.h  filetype_config.h.in  filetype_typedefs.h  filetypes.h
include/lattice/parameterization_types/: ParameterizationMediator.h  ParameterizationMediatorSU2_Real4_Real8.h  ParameterizationMediatorSU2_Real8_Complex4.h  ParameterizationMediatorSU2_Real8_Real8IgnoreSecondLine.h  ParameterizationMediatorSU2_Vector4_Complex4.h  ParameterizationMediatorSU2_Vector4_Real8.h  ParameterizationMediatorSU2_Vector4_Real8IgnoreSecondLine.h  ParameterizationMediatorSU3_Real12_Complex9.h  ParameterizationMediatorSU3_Real12_Real18.h  ParameterizationMediatorSU3_Real12_Real18_test.cc  ParameterizationMediatorSU3_Real18_Complex9.h  ParameterizationMediatorSU3_Vector2_Real18.h  ParameterizationMediatorSU3_Vector4_Complex9.h  ParameterizationMediatorSU3_Vector4_Real18.h  SU2Real4.h  SU2RealFullIgnoreSecondLine.h  SU2Vector4.h  SU3Real12.h  SU3Vector2.h  SUNComplexFull.h  SUNRealFull.h  test_SU2Vector4.cu  (+3 more)
include/math/: Complex.h  GellMannMatrices.h  PauliMatrices.h  Rootm.h
include/observables/: Plaquette.h  PlaquetteAverage.h  PlaquetteAverageCudaHelper.h  WilsonLoop.h  WilsonLoopAverage.h  WilsonLoopAverageCudaHelper.h
include/util/: Array.h
lib/gaugefixing/: CMakeLists.txt  CoulombGaugeFixingApp.cu  LandauGaugeFixingApp.cu  version.h  versioning.cmake
lib/milcinterface/: CMakeLists.txt  MILCcuLGT.cu
src/: README  (+2 more)
src/cuLGT2/: CMakeLists.txt  commonsettings.cmake  test_main.cpp
test/: CMakeLists.txt  addWithDirectory.cmake  commonsettings.cmake  gmock_setup.cmake
test/application/: CMakeLists.txt  test_FileIterator.cc  test_GaugeConfigurationIteratingApplication.cu
test/compat/: compile_all.py  config_fermi02.py  config_fermi03.py
test/cuLGT1legacy/: CMakeLists.txt  test_Complex.cu  test_SiteCompatibilityWithConfigurationPatterns.cc  test_SiteCoord.cc  test_SiteIndex.cc  test_SiteIndexSiteCoordCompatibility.cc  test_SiteNeighbourTableManager.cu  testhelper_Site.h
test/cudacommon/: CMakeLists.txt  test_DeviceCommunicator.cu
test/cudatest/: CMakeLists.txt  README  test_example_gtest_plugin.cu  test_example_gtest_plugin_host.cc
test/eigensolver/: CMakeLists.txt  test_Cardano3x3.cc  test_Cardano3x3.cu  test_Matrix.cc  test_PowerIterator.cc
test/gaugefixing/: CMakeLists.txt
test/lattice/: CMakeLists.txt  test_GaugeConfiguration.cc  test_GaugeConfiguration.cu  test_GaugeConfigurationWithPattern.cu  test_GlobalLink.cc  test_GlobalLinkWithPatterns.cc  test_GlobalLinkWithPatterns.cu  test_KernelSetup.cu  test_LatticeDimension.cu  test_LinkFile.cc  test_LinkFileVogt.cc  test_LinkFileVogtWithPattern.cc  test_LinkToGaugefieldConverter.cc  test_LocalGlobalLinkCompatibility.cc  test_LocalLink.cc  test_LocalLink.cu  test_LocalLinkWithSU2Vector4.cu  testhelper_pattern_stub.h
test/math/: CMakeLists.txt
test/observables/: CMakeLists.txt  test_Plaquette.cc  test_PlaquetteAverage.cu
test/testdata/: README  lat.sample.l4444.mdp  lat.sample.l4444.nersc  lat.sample.l4444.vogt  sample_16x8x8x8_su2.orig.hirep  sample_16x8x8x8_su2.vogt  sample_4x4x4x4_su2.orig.mdp  sample_4x4x4x4_su2.vogt
test/util/: CMakeLists.txt
(+316 files in other folders)
